# riot

./: LICENSE  README.md  pyproject.toml
ini_templates/: DISPLAY.t  HAL.t  RS274NGC.t
src/: riot.py
test/: DISPLAY.t  rio-old.hal  rio-old.ini  rio-pure.hal  rio-pure.ini  test_riot.py
