[tool.poetry]
name = "rio-temsplat"
version = "0.1.0"
description = "for customizing a generated ini file"
authors = ["Jesse Schoch"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
